# gmod_donate

./: .dockerignore  .gitignore  Cargo.toml  README.md  deploy_server.sh  docker-compose.yml  nginx.conf.example
client/: Cargo.toml
client/src/: lib.rs  tcp.rs
client_app/: Cargo.toml
client_app/src/: app.rs  main.rs  ui.rs
server/: Cargo.toml  Dockerfile  docker-entrypoint.sh
server/src/: database.rs  main.rs  rest.rs  rest_handlers.rs  tcp.rs
shared/: Cargo.toml
shared/src/: types.rs
