[package]
name = "gmod_tcp_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib"]

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "signal", "time"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
gmod_tcp_shared = { path="../shared" }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
gmod = {version="17.0.0"}
