[package]
name = "gmod_tcp_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib"]

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
gmod_tcp_shared = { path="../shared" }
gmod = {version="17.0.0"}
