[package]
name = "gmod_tcp_app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
chrono = { version = "0.4.42", features = ["serde"] }
gmod_tcp_shared = { path="../shared" }
dotenvy = "0.15.7"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
eframe = { version = "0.33.2", features = ["serde"] }
egui = { version = "0.33.2", features = ["serde"] }
reqwest = { version = "0.12.24", features = ["json", "native-tls"] }
crossbeam-channel = "0.5.15"