[package]
name = "gmod_tcp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread"] }
gmod_tcp_shared = { path="../shared" }
dotenvy = "0.15.7"
chrono = { version = "0.4.42", features = ["serde"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
axum = "0.8.7"
axum-server = "0.7.3"
tower-http = {version="0.6.7",features=["cors","trace"]}
