[package]
name = "gmod_tcp_shared"
version = "0.1.0"
edition = "2021"

[lib]
name = "gmod_tcp_shared"
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
